--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         
         <div class="image">
-            <img src="./81O-bV8gnIL._AC_SX575_.jpg">
+            <img src="https://m.media-amazon.com/images/I/81piJ2ni+RL._AC_SX575_.jpg" alt="Shoes">
             <div class="reviews">
                 <p>323</p>
             </div>
